<resources>
    <string name="google_maps_key">AIzaSyAGTVPCr5h3gRH83Q66UWbgRETpx1CrfGY</string>
    <string name="app_name">7alan</string>
    <string name="driver">Driver</string>
    <string name="client">Client</string>
    <string name="txt_login">Login</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="forget_pass">Forget password</string>
    <string name="new_account">Create an account</string>
    <string name="txt_register">Register</string>
    <string name="retype_pass">Re_type password</string>
    <string name="txt_email">E-mail address</string>
    <string name="phone">Phone number</string>
    <string name="city">City</string>
    <string name="identity">Identity number</string>
    <string name="vehicle">Vehicle number</string>
    <string name="next">Next</string>
    <string name="car_color">Car color</string>
    <string name="car_model">Car model</string>
    <string name="photo_car_form">picture of the car form</string>
    <string name="ident_photo">Identification photo</string>
    <string name="front_image">A picture of the car from front</string>
    <string name="back_image">A picture of the car from back</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="choose_image">Choose photo</string>
    <string name="enter_phone">Enter phone number</string>
    <string name="enter_email">Enter email address</string>
    <string name="inv_email">invalid email address</string>
    <string name="inv_phone">invalid phone number</string>
    <string name="enter_code">Enter Code</string>
    <string name="confirm">Confirm</string>
    <string name="plz_enter_code">Please enter validation code</string>
    <string name="error_code">Code error</string>
    <string name="wait_for_codevalidation">Wait for sending code validation</string>
    <string name="login">Login...</string>
    <string name="faild">Failed</string>
    <string name="something_haywire">Something went haywire</string>
    <string name="chk_uname_password">please check user name or password</string>
    <string name="pass_notmatch">password does not match</string>
    <string name="regfailed">Registration failed please try again later</string>
    <string name="waitreg">Wait for registering...</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="register">Register as driver</string>
    <string name="notification">Notifications</string>
    <string name="orders">Orders</string>
    <string name="pay">Pay</string>
    <string name="contact_us">Contact us</string>
    <string name="share">Share</string>
    <string name="send_report">Send Report</string>
    <string name="rules">Rules</string>
    <string name="logout">Logout</string>
    <string name="search_plc_details">Fast food store</string>
    <string name="enter_city">Enter city</string>
    <string name="enter_identity_number">Enter identity number</string>
    <string name="enter_vehicle_number">Enter vehicle number</string>
    <string name="enter_car_color">Enter car color</string>
    <string name="enter_car_model">Enter car model</string>
    <string name="profile_page">Profile page</string>
    <string name="connection">Check network connection</string>
    <string name="cfl">Can\'t find location</string>
    <string name="rate">Driver Rate</string>
    <string name="enter_rate">Enter rate</string>
    <string name="Add_rate">rate</string>
    <string name="km">Km</string>
    <string name="Subject">Subject</string>
    <string name="message">Message</string>
    <string name="call">Call</string>
    <string name="send">send</string>
    <string name="transfer_money"> Transfer money</string>
    <string name="date"> Transfer date</string>
    <string name="bank"> Transfer bank</string>
    <string name="code"> Discount code</string>
    <string name="order_detail"> order detail</string>
    <string name="car_number"> car number</string>
    <string name="time">Transfer time</string>
    <string name="close">close</string>
    <string name="yes">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="enter_new_username"> Enter_new_username </string>
    <string name="update_username">Update username</string>
    <string name="enter_new_phone">Enter new phone number</string>
    <string name="update_phone">Update phone</string>
    <string name="update_email">Update  email</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="loc_notfounded">Can\'t find location</string>
    <string name="already_driver">You are already signed in as a driver</string>
    <string name="serv_aval_drivers">Sorry this service is available to drivers only</string>
    <string name="enter_subject">Enter subject</string>
    <string name="enter_message">Enter your message</string>
    <string name="my_order">My Orders</string>
    <string name="CurrentOrders">Current</string>
    <string name="PreviousOrders">Previous</string>
    <string name="CancelledOrders">Canceled</string>
    <string name="empty_list"> There are no orders to display</string>
    <string name="Cost_the_way">Cost of way </string>
    <string name="notf_txt">Notification</string>
    <string name="no_not">There are no notifications to display</string>
    <string name="driver_accept">Your request has been accepted</string>
    <string name="accept">accept</string>
    <string name="refuse">refuse</string>
    <string name="delv_bill">Delivery bill</string>
    <string name="delev_cost">Delivery cost</string>
    <string name="type_msg">Type a message...</string>
    <string name="send_msg">Send message</string>
    <string name="Issue_bill">Issue a bill</string>
    <string name="cancel_order">Cancelling order</string>
    <string name="done">Done</string>
    <string name="cost">Cost</string>
    <string name="comp_state">Completed</string>
    <string name="delv_comp">Delivery completed</string>
    <string name="chat">Chat</string>
    <string name="order_details">Order details</string>
    <string name="deliv_order">Order delivery</string>
    <string name="add_rate">Add Rate</string>
    <string name="rate2">Add Rate</string>
    <string name="connectiom">Check network connection</string>
    <string name="driver_late">The driver was late</string>
    <string name="not_want">Not want now</string>
    <string name="other">Other</string>
    <string name="reson_for_cancel">Reason for cancellation</string>
    <string name="do_you_send_other_driver">Do you want to send the request to another driver?</string>
    <string name="yes_btn">Yes</string>
    <string name="no_btn">No</string>
    <string name="driver_name">Driver name</string>
    <string name="delivery_time">Delivery time</string>
    <string name="delete_order_must_in_5">The customer\'s order must be within 5 minutes of order</string>
    <string name="client_name">client_name</string>
    <string name="type">type now...</string>
    <string name="img_sav">image saved</string>
    <string name="rated_added">Add rate successfully</string>
    <string name="rate_notadded">rate not added try again later</string>
    <string name="failed">failed</string>
    <string name="respons_send_todriver">Your response was sent to the driver</string>
    <string name="respons_send_toclient">Your response was sent to the client</string>
    <string name="respons_not_send">Your response not send try again later</string>
    <string name="data_send">Data Sent Successfully</string>
    <string name="sending">sending data...</string>
    <string name="order_sent">Your order sent successfully</string>
    <string name="order_notsent">Your order not sent try again later</string>
    <string name="request_accepted">Your request has been successfully accepted Please log out to update your data</string>
    <string name="accepttxt">Accept</string>
    <string name="detr_cost_road">Determining the cost of the road...</string>
    <string name="send_reqtoDriv">sending order to drivers...</string>
    <string name="locating">Locating...</string>
    <string name="orded_cancelled">your order canceled</string>
    <string name="confirm_delev">Confirming delivery of the request...</string>
    <string name="cancelOrder">Cancel order ?</string>
    <string name="cancelling_ord">Canceling order...</string>
    <string name="No">No</string>
    <string name="cancel_andSend">Canceling order and sending to other drivers</string>
    <string name="enter_bill_price">Enter bill price...</string>
    <string name="chos_bill_img">please select photo bill</string>
    <string name="bill_price">Enter bill price</string>
    <string name="sendingbill">Sending bill...</string>
    <string name="sendbill_done">Bill sent successfully</string>
    <string name="send_data">sending data ..</string>
    <string name="success">sending data success</string>
    <string name="photo_sent">photo sent to you</string>
    <string name="order_delivered">Your order successfully delivered</string>
    <string name="name">Full name</string>
    <string name="age">Age</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_age">Enter your age</string>
    <string name="order_num">Orders</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="update">update</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_un">Edit Username</string>
    <string name="edit_email">Edit email</string>
    <string name="edit_phone">Edit phone number</string>
    <string name="edit_age">Edit age</string>
    <string name="edit_gender">Edit gender</string>
    <string name="nochange">No changes occur</string>
    <string name="upd_photo">Updating Photo...</string>
    <string name="upd_name">Updating Name...</string>
    <string name="upd_un">Updating Username...</string>
    <string name="upd_email">Updating Email...</string>
    <string name="upd_phone">Updating Phone number...</string>
    <string name="upd_age">Updating Age...</string>
    <string name="upd_gender">Updating Gender...</string>
    <string name="log_out">Logout...</string>
    <string name="enter_transmoney">Enter transfer money</string>
    <string name="enter_transdate">Enter transfer date</string>
    <string name="enter_transbank">Enter transfer bank</string>
    <string name="enter_discode">Enter discount code</string>
    <string name="total_cost">Total cost</string>
    <string name="bill_cost">Bill cost</string>
    <string name="sent_photo">Photo sent to you</string>
    <string name="cu_sn">snapchat</string>
    <string name="cu_in">instagram</string>
    <string name="cu_fb">facebook</string>
    <string name="cu_tw">twitter</string>
    <string name="nearby">Nearby</string>
    <string name="nearby_place">Nearby</string>
    <string name="enter_stroe">Enter Store name</string>
    <string name="ent_ored_det">Enter order details</string>
    <string name="req_sent">Request has been sent successfully</string>
    <string name="ok">Ok</string>
    <string name="no_search_result">There are no results</string>
    <string name="add_order_d">Add order details here...</string>
    <string name="detr_loc">Determine the location of the receipt</string>
    <string name="send_order">Send order</string>
    <string name="csar">Complete the current request to send another request</string>
    <string name="or_no_ex">Order not exists</string>
    <string name="ue">username already exist</string>
    <string name="stores">More</string>
</resources>