<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/client_login_tv"
        android:text="@string/reson_for_cancel"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        >

        <RadioButton
            android:id="@+id/driver_lateRBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/driver_late"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/gray2"
            android:checked="true"
            android:paddingRight="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"

            />
        <RadioButton
            android:id="@+id/noRBtn"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/not_want"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/gray2"
            android:paddingRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"

            />
        <RadioButton
            android:id="@+id/otherRBtn"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/other"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/gray2"
            android:paddingRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"

            />
    </RadioGroup>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray3"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="@color/gray3"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/do_you_send_other_driver"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        >
        <Button
            android:id="@+id/yesBtn"

            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/btn_ok_bg"
            android:text="@string/yes_btn"
            android:textSize="14sp"
            android:layout_margin="5dp"
            />
        <Button
            android:id="@+id/noBtn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/gray2"
            android:background="@drawable/btn_ok_bg"
            android:text="@string/no_btn"
            android:textSize="14sp"
            android:layout_margin="5dp"
            />
    </LinearLayout>
</LinearLayout>