<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/Issue_bill"


        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:textColor="@color/white"
        android:text="@string/bill_cost"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/bill_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:textSize="12sp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/gray1"


        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:textColor="@color/white"
        android:text="@string/Cost_the_way"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/way_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:textSize="12sp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/gray1"


        />
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="5dp"
    android:paddingLeft="5dp"
    android:textColor="@color/white"
    android:text="@string/total_cost"
    android:layout_marginTop="5dp"
    android:textSize="14sp"
    android:textStyle="bold"
    />
    <TextView
        android:id="@+id/total_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:textSize="12sp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/gray1"


        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingTop="25dp"
        android:paddingRight="8dp"
        android:paddingBottom="10dp"
        >
        <Button
            android:id="@+id/updateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/send"
            android:textColor="@color/white"
            android:layout_marginRight="5dp"

            />
        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/cancel"
            android:textColor="@color/gray1"

            />
    </LinearLayout>

</LinearLayout>