<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="16sp"


        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        >
        <RadioButton
            android:id="@+id/maleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:buttonTint="@color/white"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/femaleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:layout_marginTop="15sp"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:buttonTint="@color/white"


            />
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingTop="15dp"
        android:paddingRight="8dp"
        android:paddingBottom="10dp"
        >
        <Button
            android:id="@+id/updateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/update"
            android:textColor="@color/white"
            android:layout_marginRight="5dp"

            />
        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/cancel"
            android:textColor="@color/gray1"

            />
    </LinearLayout>

</LinearLayout>