<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.semicolon.Halan.Activities.ContactUsActivity">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"

            >
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:contentInsetEnd="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"

                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/back"
                        android:clickable="true"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:src="@drawable/white_back"
                        android:padding="13dp"
                        android:layout_gravity="left|center_vertical"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:layout_centerHorizontal="true"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:text="@string/contact_us"/>
                </RelativeLayout>

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:layoutDirection="rtl"
    android:background="@drawable/client_login_container"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:padding="5dp"
        android:drawableRight="@drawable/ic_user"
        android:textSize="14dp"
        android:textColor="@color/gray3"/>
    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="14dp"
        android:textColor="@color/gray3"/>
</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:layoutDirection="rtl"

            android:background="@drawable/client_login_container"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_email"
                android:padding="5dp"
                android:drawableRight="@drawable/ic_email"
                android:textSize="14dp"
                android:textColor="@color/gray3"/>
            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="14dp"
                android:textColor="@color/gray3"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:layoutDirection="rtl"

            android:background="@drawable/client_login_container"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Subject"
                android:padding="5dp"
                android:drawableRight="@drawable/ic_edit"
                android:textSize="14dp"
                android:textColor="@color/gray3"/>
            <EditText
                android:id="@+id/edt_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="14dp"
                android:textColor="@color/gray3"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:layoutDirection="rtl"
            android:background="@drawable/client_login_container"
            android:layout_height="150dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:padding="5dp"
                android:drawableRight="@drawable/ic_edit"
                android:textSize="14dp"
                android:textColor="@color/gray3"/>
            <EditText
                android:id="@+id/edt_message"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="5dp"
                android:textSize="14dp"
                android:maxLines="3"
                android:textColor="@color/gray3"/>
        </LinearLayout>

    </LinearLayout>
       <LinearLayout
           android:layout_alignParentBottom="true"
           android:layout_width="match_parent"
           android:orientation="vertical"
           android:layout_height="wrap_content">
           <Button
               android:id="@+id/btn_call"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@color/colorPrimary"
               android:textColor="@color/white"
               android:textSize="16sp"
               android:textStyle="bold"
               android:text="@string/call"/>
           <Button
               android:id="@+id/btn_send"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@color/gray3"
               android:textColor="@color/white"
               android:textSize="16sp"
               android:textStyle="bold"
               android:text="@string/send"/>
       </LinearLayout>
   </RelativeLayout>
</ScrollView>